--- a/Servicentro2.0/Content/StyleSheet.css
+++ b/Servicentro2.0/Content/StyleSheet.css
@@ -62,6 +62,20 @@ blockquote {
     font-size: 4vw;
 }
 
+.galeria ul {
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+}
+
+    .galeria ul li {
+        list-style: none;
+        margin-bottom: 28px;
+    }
+
+        .galeria ul li img {
+            cursor: pointer;
+        }
+
 @font-face {
     font-family: 'Magneto';
     font-style: normal;
