Detalles visuales, mas imagenes

--- a/public/partials/menu-sitio.html
+++ b/public/partials/menu-sitio.html
@@ -1,8 +1,8 @@
 ﻿<div class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class='navbar-header'>
-            <a data-toggle="collapse" data-target=".navbar-nav" href="/" class="navbar-brand servicentro-font">
-                <!--<img alt="Servicentro" src="img/customLogo.png" />-->Servicentro
+            <a href="/" class="navbar-brand servicentro-font logo">
+                <!--<img alt="Servicentro" src="images/customLogo.png" />-->Servi<span class="logo-rojo">c</span>entro
             </a>
             <button class='navbar-toggle collapsed' data-toggle='collapse' data-target='.navbar-nav' type='button'>
                 <span class='sr-only'>menu</span>
