--- a/public/partials/galeria.html
+++ b/public/partials/galeria.html
@@ -3,7 +3,7 @@
         <div class="panel panel-default" ng-repeat="album in albums.albums">
             <div class="panel-heading" role="tab" id="heading{{album.id}}">
                 <h4 class="panel-title">
-                    <span class="collapsed" role="button" data-target="#{{album.id}}" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" aria-controls="{{album.id}}">{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}} <span class="badge">{{album.fotos.length}}</span></span>
+                    <span class="collapsed" role="button" data-target="#{{album.id}}" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" aria-controls="{{album.id}}">{{album.ano}} - {{album.descripcion}} - {{album.ciudad}}, {{album.pais}} <span class="badge">{{album.fotos.length}}</span></span>
                 </h4>
             </div>
             <div ng-class="{in:$first}" albumid="{{album.id}}" id="{{album.id}}" class="panel-collapse collapse baguetteBox{{album.id}}" role="tabpanel" aria-labelledby="heading{{album.id}}">
