--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,12 +1,18 @@
-﻿<div class='fondo fondoInicio container-fluid'>
-    <!--<img class="img-responsive fondoLogo" src="img/customLogo.png" />-->
-    <div class="row">
-        <div class="col-sm-5 top-buffer">
-            <div class="embed-responsive embed-responsive-16by9">
+<header class='fondo fondoInicio container-fluid'>
+  <!--<img class="img-responsive fondoLogo" src="img/customLogo.png" />-->
+  <div class="container">
+    <div class="row" style="padding-top: 300px; padding-bottom: 200px">
+      <div class="col-sm-5 top-buffer">
+        <!--<div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="//www.youtube.com/embed/XMJMVZbm6Zo?rel=0&showinfo=0"></iframe>
-            </div>
-        </div>
+            </div>-->
+      </div>
     </div>
     <h1 class="servicentro-font texto-portada texto-sobre-imagen">Catolicos Haciendo <span>ROCK!</span> </h1>
-</div>
+  </div>
+</header>
+<conocenos></conocenos>
+<musica></musica>
+<letra></letra>
+<media></media>
 <footer-sitio></footer-sitio>
