--- a/public/partials/conocenos.html
+++ b/public/partials/conocenos.html
@@ -1,4 +1,4 @@
-﻿<div class='fondo fondoQuienesS container-fluid'>
+﻿<section id="conocenos" class='fondo fondoQuienesS container-fluid'>
     <div class="row">
         <div class="col-xs-push-1 col-xs-10 text-center top-buffer">
             <blockquote class="texto-sobre-imagen">"Somos un punto de encuentro en la ruta que recorren los jóvenes Laicos y Cristianos."</blockquote>
@@ -7,9 +7,9 @@
     </div>
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6 top-buffer">
-            <div class="embed-responsive embed-responsive-16by9">
+            <!--<div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="//www.youtube.com/embed/K6zTr_4Kmys?rel=0&showinfo=0"></iframe>
-            </div>
+            </div>-->
         </div>
     </div>
-</div>
+</section>
