--- a/public/partials/contacto.html
+++ b/public/partials/contacto.html
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<section id="contacto" class="container-fluid">
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
             <div class="panel panel-default top-buffer">
@@ -6,7 +6,7 @@
                 <form class="panel-body">
                     <div class="form-group">
                         <label for="name">Nombre*:</label>
-                        <input class="form-control" type="text" placeholder="Ingresa tu nombre" name="name" id="name" required autofocus>
+                        <input class="form-control" type="text" placeholder="Ingresa tu nombre" name="name" id="name" required>
                     </div>
                     <div class="form-group">
                         <label for="city">Ciudad*:</label>
@@ -29,4 +29,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
