--- a/public/partials/footer-sitio.html
+++ b/public/partials/footer-sitio.html
@@ -1,18 +1,25 @@
-﻿<div class='footer' ng-hide="panel.isSelected(0)">
-    <div class='container'>
-        <div class='row top-buffer' style="padding: 50px 0;">
-            <div class="col-sm-4 text-center">
-                <i class="fa fa-envelope-o fa-3x"></i>
-                <p><a href="mailto:contacto@servicentro.cl">contacto@servicentro.cl</a></p>
+﻿<footer id="contacto" class='footer'>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <span class="copyright">Copyright &copy; Servicentro 2016</span>
             </div>
-            <div class="col-sm-4 text-center">
-                <i class="fa fa-facebook-f fa-3x"></i>
-                <p><a href="//www.facebook.com/Servicentrocl/">facebook</a></p>
+            <div class="col-md-4">
+                <ul class="list-inline social-buttons">
+                    <li><a href="//plus.google.com/108680490166455718892/posts"><i class="fa fa-google-plus"></i></a>
+                    </li>
+                    <li><a href="//www.facebook.com/Servicentrocl/"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="//www.youtube.com/watch?v=0KNsVDvubm8"><i class="fa fa-youtube"></i></a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-sm-4 text-center">
-                <i class="fa fa-youtube fa-3x"></i>
-                <p><a href="//www.youtube.com/watch?v=0KNsVDvubm8">youtube</a></p>
+            <div class="col-md-4">
+                <ul class="list-inline quicklinks">
+                    <li><a href="mailto:contacto@servicentro.cl">contacto@servicentro.cl</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-</div>
+</section>
