--- a/public/partials/letra.html
+++ b/public/partials/letra.html
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<section id="letra" class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <div class="panel panel-default top-buffer">
@@ -322,4 +322,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
