--- a/public/partials/musica.html
+++ b/public/partials/musica.html
@@ -1,7 +1,7 @@
-﻿<div class="container top-buffer">
+﻿<section id="musica" class="container-fluid">
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
             <iframe width="100%" height="500" scrolling="no" frameborder="no" src="https://www.reverbnation.com/widget_code/html_widget/artist_3068365?widget_id=55&pwc[included_songs]=1&context_type=page_object&id_unique=artist_3068365&spoid=artist_5105619&pwc[size]=small" style="width:0px;min-width:100%;max-width:100%;height:500px;"></iframe>
         </div>
     </div>
-</div>
+</section>
