Cambios con imagenes de Nacho y cambio de estilos - Segunda propuesta

--- a/public/partials/conocenos.html
+++ b/public/partials/conocenos.html
@@ -1,8 +1,8 @@
 ﻿<section id="conocenos" class='fondo fondoQuienesS container-fluid'>
     <div class="row">
         <div class="col-xs-push-1 col-xs-10 text-center top-buffer">
-            <blockquote class="texto-sobre-imagen">"Somos un punto de encuentro en la ruta que recorren los jóvenes Laicos y Cristianos."</blockquote>
-            <p class="texto-sobre-imagen">Un lugar lleno de luces, música y guitarras en que se detienen, comparten, celebran y recargan sus energías para continuar el viaje, llevando en la maleta un mensaje… que a veces pasará desapercibido y otras será más explícito, pero que siempre los acompañará en la ruta, vengan de donde vengan y vayan donde vayan.</p>
+            <blockquote class="texto-sobre-imagen">"Somos un punto de encuentro en el camino, una banda, una experiencia de Rock."</blockquote>
+            <p class="texto-sobre-imagen parrafo-conocenos">Detente un momento y escucha, celebra, ama y carga energías. Luego puedes continuar tu ruta, en tu maleta… hemos dejado un mensaje.</p>
         </div>
     </div>
     <div class="row">
