--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -8,7 +8,7 @@
             </div>-->
       </div>
     </div>
-    <h1 class="servicentro-font texto-portada texto-sobre-imagen">Catolicos Haciendo <span>ROCK!</span> </h1>
+    <p class="capture-it-font texto-portada texto-sobre-imagen">Servicentro</p>
   </div>
 </header>
 <conocenos></conocenos>
