--- a/public/partials/media.html
+++ b/public/partials/media.html
@@ -1,4 +1,4 @@
-<section id="media" class="" style="padding: 0; height: 100%;" ng-controller="albumsController as albums">
+<section id="media" class="fondo fondoMedia container-fluid" style="padding: 0; height: 100%;" ng-controller="albumsController as albums">
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -15,7 +15,7 @@
             </a>
           </div>
         </div>
-        <div class="carousel-caption">
+        <div class="carousel-caption parrafo-conocenos texto-sobre-imagen">
           {{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}
         </div>
       </div>
