--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -8,7 +8,7 @@
             </div>-->
       </div>
     </div>
-    <p class="capture-it-font texto-portada texto-sobre-imagen">Servicentro</p>
+    <p class="servicentro-font logo texto-portada texto-sobre-imagen">Servi<span class="logo-rojo">c</span>entro</p>
   </div>
 </header>
 <conocenos></conocenos>
