--- a/public/partials/letra.html
+++ b/public/partials/letra.html
@@ -1,4 +1,4 @@
-﻿<section id="letra" class="fondo container-fluid fondoLetra" style="padding: 70px 0;">
+﻿<section id="letra" class="fondo container-fluid fondoLetra" >
     <div class="row">
         <div class="col-sm-12">
             <div class="panel panel-default" style="background: transparent; border: 0;">
