--- a/public/partials/media.html
+++ b/public/partials/media.html
@@ -1,4 +1,4 @@
-<section id="media" class="fondo fondoMedia container-fluid" style="padding: 0; height: 100%;" ng-controller="albumsController as albums">
+<section id="media" class="fondo fondoMedia" style="padding: 80px; height: 100%;" ng-controller="albumsController as albums">
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -8,10 +8,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item" ng-class="{active:$first}" ng-repeat="album in albums.albums">
-        <div class="baguetteBox{{album.id}}" style="height: 100%;">
-          <div ng-repeat="foto in album.fotos" style="height: 100%;">
+        <div class="baguetteBox{{album.id}}" >
+          <div ng-repeat="foto in album.fotos" >
             <a href="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" data-caption="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
-              <img class="car center-block" ng-show="$first" ng-src="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-01.jpg" alt="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
+              <img class="car center-block img-responsive" style="width:100%;" ng-show="$first" ng-src="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-01.jpg" alt="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
             </a>
           </div>
         </div>
