--- a/public/partials/menu-sitio.html
+++ b/public/partials/menu-sitio.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <div class='navbar-header'>
       <a href="#page-top" class="navbar-brand servicentro-font logo" du-smooth-scroll du-scrollspy>
         <!--<img alt="Servicentro" src="images/customLogo.png" />-->Servi<span class="logo-rojo">c</span>entro
