Arreglos y Campaña Fondeadora
Se agrega campaña de fondeadora y se hacen arreglos a la pagina

--- a/public/partials/conocenos.html
+++ b/public/partials/conocenos.html
@@ -1,15 +1,20 @@
 ﻿<section id="conocenos" class='fondo fondoQuienesS container-fluid'>
     <div class="row">
-        <div class="col-xs-push-1 col-xs-10 text-center top-buffer">
+        <div class="col-xs-push-1 col-xs-10 text-center">
             <blockquote class="texto-sobre-imagen">"Somos un punto de encuentro en el camino, una banda, una experiencia de Rock."</blockquote>
             <p class="texto-sobre-imagen parrafo-conocenos">Detente un momento y escucha, celebra, ama y carga energías. Luego puedes continuar tu ruta, en tu maleta… hemos dejado un mensaje.</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6 top-buffer">
-            <!--<div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/K6zTr_4Kmys?rel=0&showinfo=0"></iframe>
-            </div>-->
+        <div class="col-sm-offset-1 col-sm-4 top-buffer">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/13pZ6S2IJPg?rel=0&showinfo=0"></iframe>
+            </div>
+        </div>
+        <div class="col-sm-offset-2 col-sm-4 top-buffer">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/0KNsVDvubm8?rel=0&showinfo=0"></iframe>
+            </div>
         </div>
     </div>
 </section>
