--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,14 +1,64 @@
 <header class='fondo fondoInicio container-fluid'>
   <!--<img class="img-responsive fondoLogo" src="img/customLogo.png" />-->
-  <div class="container">
-    <div class="row" style="padding-top: 300px; padding-bottom: 200px">
-      <div class="col-sm-5 top-buffer">
+  <div class="container-fluid">
+    <div class="row" style="padding-top: 100px;">
+      <div class="col-sm-5 col-sm-offset-7 col-md-4 col-md-offset-8">
         <!--<div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="//www.youtube.com/embed/XMJMVZbm6Zo?rel=0&showinfo=0"></iframe>
             </div>-->
+            <!--inicio Fondeadora-->
+            <div class="project" style="height: 63vh;">
+              <div class="project-image">
+                <a target="" href="https://fondeadora.com/projects/primera-produccion-musical-de-servicentro">
+                  <div class="project-mask"></div>
+                  <img src="images/44246.jpg" alt="44246">
+                </a>
+                <div class="badges-wrapper"></div>
+                <span class="category-box industrias-creativas">Música</span>
+              </div>
+              <div class="fucking-shadow" style="display: none"></div>
+              <div class="project-info project-info-container">
+                <h4 class="project-name"><a target="" href="https://fondeadora.com/projects/primera-produccion-musical-de-servicentro">Primera producción musical de Servicentro</a></h4>
+                <div class="project-user cf">
+                  <div id="project-user-left">
+                    <img src="images/servicentro.png" alt="servicentro">
+                  </div>
+                  <div id="project-user-right">
+                    <p>Por: Servicentro
+                    </p>
+                    <p class="location">Santiago, Chile</p>
+                  </div>
+                </div>
+                <div class="stats cf">
+                  <div class="pledged-meter "><span class="match"></span><span class="meter" style="width: 0%"></span></div>
+                  <div class="info_project">
+                    <div id="raised" class="stat">
+                      <div class="currency_value">
+                        <span class="currency_symbol">$</span>
+                        <span class="pledged" data-amount="0.0" data-currency="CLP">0</span>
+                        <span class="currency_code">CLP</span>
+                      </div>
+                      <span class="has">recaudado</span>
+                    </div>
+                    <div id="project_percentage" class="stat"><span class="percentage">0%</span>
+                      <br>
+                      <br><span class="fondeado label">fondeado</span></div>
+                    <div id="remaining_time" class="stat ">
+                      <div class="time_days"><span class="num"></span></div><span class="remaining label"></span></div>
+                  </div>
+                </div>
+              </div>
+              <div class="back-button">
+                <a class="button_fondear" data-hover="Fondear proyecto" target="" href="https://fondeadora.com/projects/primera-produccion-musical-de-servicentro/fondear_all">Fondear proyecto</a>
+              </div>
+            </div>
+            <!--fin-->
       </div>
     </div>
-    <p class="servicentro-font logo texto-portada texto-sobre-imagen">Servi<span class="logo-rojo">c</span>entro</p>
+    <div class="texto-sobre-imagen">
+      <p class="hidden-xs texto-random-portada montserrat-font">Apoya nuestro proyecto musical</p>
+      <p class="servicentro-font logo texto-portada">Servi<span class="logo-rojo">c</span>entro</p>
+    </div>
   </div>
 </header>
 <conocenos></conocenos>
