--- a/public/partials/letra.html
+++ b/public/partials/letra.html
@@ -1,7 +1,7 @@
 ﻿<section id="letra" class="fondo container-fluid fondoLetra" >
     <div class="row">
         <div class="col-sm-12">
-            <div class="panel panel-default" style="background: transparent; border: 0;">
+            <div class="panel panel-default montserrat-font" style="background: transparent; border: 0;">
                 <div class="panel-body" style="background: transparent;">
                     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                         <div class="panel panel-default no-border">
