--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,9 @@
 html {
-    height: 100%;
+    height: 100% !important;
 }
 
 body {
-    height: 100%;
+    height: 100% !important;
 }
 
 .navbar-brand > img {
