--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
 .fondo {
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100%;
+    height: 100vh;
     background-position-x: right;
     background-position-y: top;
 }
