--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    min-height: 100vh;
     background-position-x: right;
     background-position-y: top;
 }
