Cambios nuevos temas, SEO

--- a/public/partials/galeria.html
+++ b/public/partials/galeria.html
@@ -9,8 +9,8 @@
             <div ng-class="{in:$first}" albumid="{{album.id}}" id="{{album.id}}" class="panel-collapse collapse baguetteBox{{album.id}}" role="tabpanel" aria-labelledby="heading{{album.id}}">
                 <div class="panel-body">
                     <div ng-repeat="foto in album.fotos" class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
-                        <a href="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" data-caption="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
-                            <img class="img-responsive bottom-buffer box" ng-src="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-{{foto}}.jpg">
+                        <a href="images/galerias/{{album.ano}}{{album.nombre}}/Servicentro-{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" data-caption="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
+                            <img class="img-responsive bottom-buffer box" ng-src="images/galerias/{{album.ano}}{{album.nombre}}/Servicentro-{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" alt="Servicentro-{{album.ano}}-{{album.nombre}}-{{foto}}">
                         </a>
                     </div>
                 </div>
