Correccion nueva URL

--- a/public/partials/media.html
+++ b/public/partials/media.html
@@ -10,8 +10,8 @@
       <div class="item" ng-class="{active:$first}" ng-repeat="album in albums.albums">
         <div class="baguetteBox{{album.id}}" >
           <div ng-repeat="foto in album.fotos" >
-            <a href="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" data-caption="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
-              <img class="car center-block img-responsive" style="width:100%;" ng-show="$first" ng-src="images/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-01.jpg" alt="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
+            <a href="images/galerias/{{album.ano}}{{album.nombre}}/Servicentro-{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" data-caption="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
+              <img class="car center-block img-responsive" style="width:100%;" ng-show="$first" ng-src="images/galerias/{{album.ano}}{{album.nombre}}/Servicentro-{{album.ano}}-{{album.nombre}}-01.jpg" alt="Servicentro - {{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
             </a>
           </div>
         </div>
