--- a/public/partials/musica.html
+++ b/public/partials/musica.html
@@ -1,7 +1,7 @@
 ﻿<section id="musica" class="fondo container-fluid fondoMusica">
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
-            
+            <a href="http://www.cdbaby.com/cd/servicentro" target="cdbaby" style="display:inline-block;background:url(http://CDBaby.name/s/e/servicentro.jpg) 18px 2px no-repeat, url(http://content.cdbaby.com/img/links/link-artwork-cart-dark-buy-now.png) 0px 0px no-repeat;background-size:175px, 211px;height:233px;width:211px;" title="Servicentro: Kilómetro 1" alt="Servicentro: Kilómetro 1" ></a>
         </div>
     </div>
 </section>
