--- a/public/partials/musica.html
+++ b/public/partials/musica.html
@@ -1,7 +1,29 @@
 ﻿<section id="musica" class="fondo container-fluid fondoMusica">
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
-            <a href="http://www.cdbaby.com/cd/servicentro" target="cdbaby" style="display:inline-block;background:url(http://CDBaby.name/s/e/servicentro.jpg) 18px 2px no-repeat, url(http://content.cdbaby.com/img/links/link-artwork-cart-dark-buy-now.png) 0px 0px no-repeat;background-size:175px, 211px;height:233px;width:211px;" title="Servicentro: Kilómetro 1" alt="Servicentro: Kilómetro 1" ></a>
+            <div class="panel">
+                <div class="panel-body">
+                    <div class="col-sm-6">
+                        <img style="height: 200px;" src="http://es.members.cdbaby.com/images/uploader/servicentro/albumart.jpg" alt="Kilómetro 1">
+                        <h4 class="std-font">Kilómetro 1</h4>
+                    </div>
+                    <div class="col-sm-6">
+                        <div>
+                            <span class="std-font">Disco Fisico</span>
+                        </div>
+                        <div>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScaiqZupSp7rCVdBaF43aHgN27xBsztsKpF0gwiwqzPEvLNBA/viewform" class="btn btn-default">Comprar disco Fisico</a>
+                        </div>
+                        <br />
+                        <div>
+                            <span class="std-font">Disco Digital</span>
+                        </div>
+                        <div>
+                            <a href="http://www.cdbaby.com/cd/servicentro" target="cdbaby" style="display:inline-block;background:url(http://content.cdbaby.com/img/links/link-dark-buy-album.png) no-repeat;width:124px;height:39px;" title="Servicentro: Kilómetro 1" alt="Servicentro: Kilómetro 1" ></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
