--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -7,6 +7,30 @@
                 <iframe class="embed-responsive-item" src="//www.youtube.com/embed/XMJMVZbm6Zo?rel=0&showinfo=0"></iframe>
             </div>-->
       </div>
+      <div class="panel col-sm-offset-5 col-md-offset-6">
+        <div class="panel-body">
+          <div class="col-sm-6">
+            <img style="height: 200px;" src="http://es.members.cdbaby.com/images/uploader/servicentro/albumart.jpg" alt="Kilómetro 1">
+            <h4 class="std-font">Kilómetro 1</h4>
+          </div>
+          <div class="col-sm-6">
+            <div>
+                <span class="std-font">Disco Fisico</span>
+            </div>
+            <div>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScaiqZupSp7rCVdBaF43aHgN27xBsztsKpF0gwiwqzPEvLNBA/viewform" class="btn btn-default">Comprar disco Fisico</a>
+            </div>
+            <br />
+            <div>
+                <span class="std-font">Disco Digital</span>
+            </div>
+            <div>
+                <a href="http://www.cdbaby.com/cd/servicentro" target="cdbaby" style="display:inline-block;background:url(http://content.cdbaby.com/img/links/link-dark-buy-album.png) no-repeat;width:124px;height:39px;" title="Servicentro: Kilómetro 1" alt="Servicentro: Kilómetro 1" ></a>
+            </div>
+          </div>
+        </div>
+    </div>
+
     </div>
     <div class="texto-sobre-imagen">
       <p class="servicentro-font logo texto-portada">Servi<span class="logo-rojo">c</span>entro</p>
