--- a/public/partials/musica.html
+++ b/public/partials/musica.html
@@ -9,10 +9,10 @@
                     </div>
                     <div class="col-sm-6">
                         <div>
-                            <span class="std-font">Disco Fisico</span>
+                            <span class="std-font">Disco Físico</span>
                         </div>
                         <div>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScaiqZupSp7rCVdBaF43aHgN27xBsztsKpF0gwiwqzPEvLNBA/viewform" class="btn btn-default">Comprar disco Fisico</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScaiqZupSp7rCVdBaF43aHgN27xBsztsKpF0gwiwqzPEvLNBA/viewform" class="btn btn-default">Comprar Disco Físico</a>
                         </div>
                         <br />
                         <div>
