--- a/public/partials/conocenos.html
+++ b/public/partials/conocenos.html
@@ -8,12 +8,12 @@
     <div class="row">
         <div class="col-sm-offset-1 col-sm-4 top-buffer">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/13pZ6S2IJPg?rel=0&showinfo=0"></iframe>
+                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/_EKQqzKMUIs?rel=0&showinfo=0"></iframe>
             </div>
         </div>
         <div class="col-sm-offset-2 col-sm-4 top-buffer">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/0KNsVDvubm8?rel=0&showinfo=0"></iframe>
+                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/JCqranuslCI?rel=0&showinfo=0"></iframe>
             </div>
         </div>
     </div>
