--- a/public/partials/conocenos.html
+++ b/public/partials/conocenos.html
@@ -7,11 +7,13 @@
     </div>
     <div class="row">
         <div class="col-sm-offset-1 col-sm-4 top-buffer">
+            <h4 class="std-font">Yo Le Diré</h4>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="//www.youtube.com/embed/_EKQqzKMUIs?rel=0&showinfo=0"></iframe>
             </div>
         </div>
         <div class="col-sm-offset-2 col-sm-4 top-buffer">
+            <h4 class="std-font">Mall De Las Almas</h4>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="//www.youtube.com/embed/JCqranuslCI?rel=0&showinfo=0"></iframe>
             </div>
