--- a/public/partials/footer-sitio.html
+++ b/public/partials/footer-sitio.html
@@ -6,11 +6,17 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="//plus.google.com/108680490166455718892/posts"><i class="fa fa-google-plus"></i></a>
+                    <li><a href="//plus.google.com/108680490166455718892/posts" alt="Google+ Servicentro"><i class="fa fa-google-plus"></i></a>
                     </li>
-                    <li><a href="//www.facebook.com/Servicentrocl/"><i class="fa fa-facebook"></i></a>
+                    <li><a href="//www.facebook.com/Servicentrocl/" alt="Facebok Servicentro"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="//www.youtube.com/watch?v=0KNsVDvubm8"><i class="fa fa-youtube"></i></a>
+                    <li><a href="//www.youtube.com/watch?v=0KNsVDvubm8" alt="Youtube Servicentro"><i class="fa fa-youtube"></i></a>
+                    </li>
+                    <li><a href="//open.spotify.com/album/11Y5PkMkyJxPxeMQq8ZudQ" alt="Spotify Servicentro"><i class="fa fa-spotify"></i></a>
+                    </li>
+                    <li><a href="//itunes.apple.com/cl/album/kil%C3%B3metro-1/id1237982511" alt="Apple Music Servicentro"><i class="fa fa-apple"></i></a>
+                    </li>
+                    <li><a href="//play.google.com/store/music/album/Servicentro_Kil%C3%B3metro_1?id=B3vgabl5w7w34pmhliddv2mly74" alt="Google Play Servicentro"><i class="fa fa-play"></i></a>
                     </li>
                 </ul>
             </div>
