--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -10,7 +10,7 @@
       <div class="panel col-sm-offset-5 col-md-offset-6">
         <div class="panel-body">
           <div class="col-sm-6">
-            <img style="height: 200px;" src="http://es.members.cdbaby.com/images/uploader/servicentro/albumart.jpg" alt="Kilómetro 1">
+            <img style="height: 200px;" src="https://cdbaby.name/s/e/servicentro_large.jpg" alt="Kilómetro 1">
             <h4 class="std-font">Kilómetro 1</h4>
           </div>
           <div class="col-sm-6">
